--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,9 @@ serde_json = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
+# Date/Time
+chrono = "0.4"
+
 [dev-dependencies]
 # Testing utilities
 pretty_assertions = "1.4"
